{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 44,
  "lineage": "65a4b065-50c8-6f56-db75-54727d8de1bf",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:security-group/sg-0b1036fa49f541dca",
            "description": "Managed by Terraform",
            "filter": null,
            "id": "sg-0b1036fa49f541dca",
            "name": "sonar",
            "tags": {},
            "vpc_id": "vpc-040ce04b65f944989"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:subnet/subnet-0500ba96ae8f8ecd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "id": "subnet-0500ba96ae8f8ecd6",
            "map_public_ip_on_launch": false,
            "owner_id": "536285340728",
            "state": "available",
            "tags": {
              "Name": "sonar"
            },
            "vpc_id": "vpc-040ce04b65f944989"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:vpc/vpc-040ce04b65f944989",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07f61d0e8c4d7f05b",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-1ed7e366",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040ce04b65f944989",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0327bfdc71c849237",
            "owner_id": "536285340728",
            "state": "available",
            "tags": {
              "Name": "sonar"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d4e9ff62bc40e03",
            "arn": "arn:aws:ec2:us-east-1:536285340728:instance/i-0226822b574059434",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0226822b574059434",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0a3e8a870b57c95c4",
            "private_dns": "ip-10-0-1-6.ec2.internal",
            "private_ip": "10.0.1.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0604815526408efa2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0500ba96ae8f8ecd6",
            "tags": {
              "Name": "SONAR-QUBE"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b1036fa49f541dca"
            ]
          },
          "dependencies": [
            "aws_security_group.sonar",
            "aws_subnet.sonar",
            "aws_vpc.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-053d40002cbaa9504",
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar"
            },
            "vpc_id": "vpc-040ce04b65f944989"
          },
          "dependencies": [
            "aws_vpc.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-092d00a48b9c33b4d",
            "owner_id": "536285340728",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sonar"
            },
            "vpc_id": "vpc-040ce04b65f944989"
          },
          "dependencies": [
            "aws_vpc.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:security-group/sg-0b1036fa49f541dca",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "id": "sg-0b1036fa49f541dca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonar",
            "name_prefix": null,
            "owner_id": "536285340728",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-040ce04b65f944989"
          },
          "dependencies": [
            "aws_vpc.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:subnet/subnet-0500ba96ae8f8ecd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0500ba96ae8f8ecd6",
            "map_public_ip_on_launch": false,
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar"
            },
            "vpc_id": "vpc-040ce04b65f944989"
          },
          "dependencies": [
            "aws_vpc.sonar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sonar",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536285340728:vpc/vpc-040ce04b65f944989",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0add90b90e47f16e5",
            "default_route_table_id": "rtb-0327bfdc71c849237",
            "default_security_group_id": "sg-0f58715ffb7e095c5",
            "dhcp_options_id": "dopt-1ed7e366",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-040ce04b65f944989",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0327bfdc71c849237",
            "owner_id": "536285340728",
            "tags": {
              "Name": "sonar"
            }
          }
        }
      ]
    }
  ]
}